Add role-based authorities in SecurityConfig and JwtFilter